@@ -1,3 +1,6 @@
+2023-02-18
+-	Fix #415. ICMP decoding in netflow v9
+
 2023-02-11
 -	Refine sampling to fix #410
 
